--- a/sqlcompare.html
+++ b/sqlcompare.html
@@ -10,7 +10,7 @@
   		<noscript>You need to enable JavaScript to run this app.</noscript>
 	</head>
 	<body>
-		<h2><button onclick="compareText();">Compare SQL </button></h2>
+		<h2><button onclick="compareText();">Compare SQL </button> <span id="result"></span></h2>
 		<p>
 			SQL Code [A]
 			<textarea class="lineCounter" id='lineCounter1' wrap='off' readonly>1.</textarea>
