--- a/sqlcompare.html
+++ b/sqlcompare.html
@@ -21,6 +21,8 @@
 			<textarea class="lineCounter" id='lineCounter2' wrap='off' readonly>1.</textarea>
 			<textarea class="codeEditor" id='codeEditor2' wrap='off'></textarea>
 		</p>
+		<br>
+		<a href="sqlcompare.zip">download sqlcompare.zip for local usage</a>
 		<script src="sqlcompare.js"></script>
 	</body>
 	
